--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -2403,11 +2403,10 @@ lattice of a finite algebra.
 \
 
 \scs
-%\begin{table}
-%\begin{center}
+
 \setlength{\tabcolsep}{2pt}
 \begin{tabular}{ccc}
-1.&
+$\bL_1$&
 \begin{minipage}{0.06\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
@@ -2416,8 +2415,7 @@ lattice of a finite algebra.
 \node(2) at (-0.5,0.0)[e]{};%$1\ 3|2\ 4$};
 \node(1) at (0.33,-0.33)[e]{};%$1|2|3\ 4$};
 \node(0) at (0,-1)[e]{};
-%\node at (-.6,0)[left]{\scs 1.};
-%\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(3)--(4);
 \draw(2)--(4);
 \draw(1)--(3);
@@ -2426,16 +2424,17 @@ lattice of a finite algebra.
 \end{tikzpicture}
 \end{minipage}
 &
-$\setlength{\arraycolsep}{2pt}
+$\setlength{\arraycolsep}{1pt}
 \begin{array}{c|cccc}
     x& 0& 1& 2& 3\\\hline
    f(x)& 1& 0& 3& 2\\
    g(x)& 1& 0& 1& 0\end{array}$
 \end{tabular}
-\smallskip
+
+\ 
 
 \begin{tabular}{ccc}
-2.&
+$\bL_2$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
@@ -2444,8 +2443,7 @@ $\setlength{\arraycolsep}{2pt}
 \node(2) at (0.0,0.0)[e]{};
 \node(1) at (-0.5,0.0)[e]{};
 \node(0) at (-0.0,-1.0)[e]{};
-%\node at (-0.6,0)[left]{\scs 2. ($M_3$)};
-%\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(3)--(4);
 \draw(2)--(4);
 \draw(1)--(4);
@@ -2455,14 +2453,14 @@ $\setlength{\arraycolsep}{2pt}
 \end{tikzpicture}
 \end{minipage}
 &
-$\setlength{\arraycolsep}{2pt}\begin{array}{c|cccc}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
     x& 0& 1& 2& 3\\\hline
    f(x)& 1& 0& 3& 2\\
    g(x)& 2& 3& 0& 1\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
-3.&
+$\bL_3$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
@@ -2472,8 +2470,7 @@ $\setlength{\arraycolsep}{2pt}\begin{array}{c|cccc}
 \node(2) at (0,0)[e]{};
 \node(1) at (0.5,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-%\node at (0,-1.25){\scs 3 $(V_1)$};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(4)--(5);
 \draw(3)--(5);
 \draw(2)--(5);
@@ -2493,18 +2490,17 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccccc}
 \end{tabular}
 
 \begin{tabular}{ccc}
-4.&
+$\bL_4$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(5) at (0,1)[e]{};
 \node(4) at (0,0.33)[e]{};
-\node(3) at (0.34,0.33)[e]{};
+\node(3) at (0.4,0.33)[e]{};
 \node(2) at (-0.5,0)[e]{};
 \node(1) at (0.2,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-%\node at (0,-1.25){\scs 4 $(L_5)$};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(4)--(5);
 \draw(3)--(5);
 \draw(2)--(5);
@@ -2523,18 +2519,17 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccc}
 \end{tabular}
 
 \begin{tabular}{ccc}
-5.&
+$\bL_5$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(5) at (0,1)[e]{};
 \node(4) at (0.2,0.33)[e]{};
 \node(3) at (-0.5,0)[e]{};
-\node(2) at (0.34,-0.33)[e]{};
+\node(2) at (0.4,-0.33)[e]{};
 \node(1) at (0,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-%\node at (0,-1.25){\scs 5 $(L_4)$};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(4)--(5);
 \draw(3)--(5);
 \draw(2)--(4);
@@ -2552,7 +2547,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
 \end{tabular}
 
 \begin{tabular}{ccc}
-6.&
+$\bL_6$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
@@ -2562,8 +2557,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
 \node(2) at (-0.5,-0.33)[e]{};
 \node(1) at (0.5,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-%\node at (0,-1.25){\scs 6};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(4)--(5);
 \draw(3)--(5);
 \draw(2)--(4);
@@ -2581,7 +2575,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \end{tabular}
 
 \begin{tabular}{ccc}
-7.&
+$\bL_7$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
@@ -2591,8 +2585,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \node(2) at (0.5,0)[e]{};
 \node(1) at (0.5,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
-%\node at (0,-1.25){\scs 7};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(4)--(5);
 \draw(3)--(5);
 \draw(2)--(4);
@@ -2610,7 +2603,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \end{tabular}
 
 \begin{tabular}{ccc}
-8.&
+$\bL_8$&
 \begin{minipage}{0.12\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
@@ -2620,8 +2613,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \node(2) at (0.33,0)[e]{};
 \node(1) at (1,0)[e]{};
 \node(0) at (0,-1)[e]{};
-%\node at (0,-1.25){\scs 8 $(M_4)$};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(4)--(5);
 \draw(3)--(5);
 \draw(2)--(5);
@@ -2638,12 +2630,12 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
    f(x)& 1& 2& 0& 4& 5& 3\\
    g(x)& 3& 5& 4& 0& 2& 1\end{array}$
 \end{tabular}
-%\end{center}
-%\end{table}
 
-\begin{center}
-\begin{tabular}{c}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\begin{tabular}{ccc}
+$\bL_9$&
+\begin{minipage}{0.08\textwidth}
+\begin{tikzpicture}
+    [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (0.5,0.33)[e]{};
 \node(4) at (-0.33,0)[e]{};
@@ -2651,13 +2643,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \node(2) at (0,0)[e]{};
 \node(1) at (0.5,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 9};
-\node at (0,1.1)[above]{$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
-        x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
-    f(x)& 0& 0& 0& 0& 0& 0& 2& 1&  2&  1&   3&   4&   5&   3&   4&  5\\
-   g(x)& 0& 0& 0& 0& 0& 0& 6&  7&  6&  7& 10& 11& 12& 10& 11& 12 \\
-   h(x)&13&14&15&1&9&8&15&14&13& 15& 1&  9&    8&   8& 1&   9\end{array}$};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2668,9 +2654,20 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \draw(0)--(3);
 \draw(0)--(4);
 \end{tikzpicture}
-\
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
+        x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
+    f(x)& 0& 0& 0& 0& 0& 0& 2& 1&  2&  1&   3&   4&   5&   3&   4&  5\\
+   g(x)& 0& 0& 0& 0& 0& 0& 6&  7&  6&  7& 10& 11& 12& 10& 11& 12 \\
+   h(x)&13&14&15&1&9&8&15&14&13& 15& 1&  9&    8&   8& 1&   9\end{array}$
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{10}$&
+\begin{minipage}{0.1\textwidth}
 \begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0.33,1)[e]{};
 \node(5) at (0,0.33)[e]{};
 \node(4) at (0.66,0.33)[e]{};
@@ -2678,12 +2675,7 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 \node(2) at (-0.33,-0.33)[e]{};
 \node(1) at (0.33,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 10};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-No finite algebra\\
-known with this\\
-congruence lattice\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2693,9 +2685,20 @@ congruence lattice\end{tabular}};
 \draw(0)--(1);
 \draw(0)--(2);
 \draw(0)--(3);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [xscale=.8, yscale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+No finite algebra\\
+known with this\\
+congruence lattice\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{11}$&
+\begin{minipage}{0.08\textwidth}
+\begin{tikzpicture}
+    [xscale=.4, yscale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0.33,1)[e]{};
 \node(5) at (-0.33,0.33)[e]{};
 \node(4) at (1,0.33)[e]{};
@@ -2703,11 +2706,7 @@ congruence lattice\end{tabular}};
 \node(2) at (-1,-0.33)[e]{};
 \node(1) at (0.33,-0.33)[e]{};
 \node(0) at (-0.33,-1)[e]{};
-\node at (0,-1.25){\scs 11};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-Finite algebra with\\
-108 elements known\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -2716,9 +2715,19 @@ Finite algebra with\\
 \draw(1)--(4);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+Finite algebra with\\
+108 elements known\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{12}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (0.5,0.33)[e]{};
 \node(4) at (-0.5,0.33)[e]{};
@@ -2726,14 +2735,7 @@ Finite algebra with\\
 \node(2) at (0.5,-0.33)[e]{};
 \node(1) at (-0.5,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 12 };
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,0,3,3,3,6,6,6,0)\\
-(0,0,8,8,8,1,1,1,0)\\
-(0,5,5,4,0,0,5,4,4)\\
-(4,2,2,3,4,4,2,3,3)\\
-(5,5,7,7,7,6,6,6,5)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2742,9 +2744,23 @@ Finite algebra with\\
 \draw(0)--(1);
 \draw(0)--(2);
 \draw(0)--(3);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccccccc}
+   x& 0& 1& 2& 3& 4& 5& 6& 7& 8\\\hline
+f(x)& 0& 0& 3& 3& 3& 6& 6& 6& 0\\
+g(x)& 0& 0& 8& 8& 8& 1& 1& 1& 0\\
+h(x)& 0& 5& 5& 4& 0& 0& 5& 4& 4\\
+k(x)& 4& 2& 2& 3& 4& 4& 2& 3& 3\\
+l(x)& 5& 5& 7& 7& 7& 6& 6& 6& 5\end{array}$
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{13}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (0.5,0.5)[e]{};
 \node(4) at (0,0)[e]{};
@@ -2752,18 +2768,7 @@ Finite algebra with\\
 \node(2) at (0.5,0)[e]{};
 \node(1) at (0.5,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 13 };
-\node at (0,1.1)[above]{$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
-        x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
-    f(x)& 0& 1& 0& 0& 0& 0& 2& 1&  2&  1&   3&   4&   5&   3&   4&  5\\
-   g(x)& 0& 0& 0& 0& 0& 0& 6&  7&  6&  7& 10& 11& 12& 10& 11& 12 \\
-   h(x)&13&14&15&1&9&8&15&14&13& 15& 1&  9&    8&   8& 1&   9\end{array}$};{\begin{tabular}{l}
-(0,1,2,1,2,1,0,0,1,2,2,1,0,0,1,2,1,2,0)\\
-(0,1,2,0,0,2,2,0,3,4,0,4,4,6,5,2,6,6,2)\\
-(0,1,2,3,4,5,6,0,1,2,4,5,6,0,1,2,3,4,6)\\
-(7,8,9,3,10,11,12,3,3,3,3,3,3,11,11,11,11,11,11)\\
-(13,14,15,16,17,5,18,13,16,17,17,16,13,5,5,5,5,5,5)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2772,21 +2777,33 @@ Finite algebra with\\
 \draw(0)--(1);
 \draw(0)--(3);
 \draw(0)--(4);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}
+\begin{array}{c|ccccccccccccccccccc}
+    x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9&10&11&12&13&14&15&16&17&18\\\hline
+f(x)& 0& 1& 2& 1& 2& 1& 0& 0& 1& 2&   2& 1&  0&  0&  1&  2&  1&  2& 0\\
+g(x)& 0& 1& 2& 0& 0& 2& 2& 0& 3& 4&  0&  4& 4&   6&  5&  2&  6&  6& 2\\
+h(x)& 0& 1& 2& 3& 4& 5& 6& 0& 1& 2&  4&  5& 6&   0& 1&   2&  3&  4& 6\\
+k(x)& 7& 8& 9& 3&10&11&12&3&3& 3&  3&  3& 3& 11&11&11& 11&11&11\\
+l(x)&13&14&15&16&17& 5&18&13&16&17&17&16&13&5&5&5& 5&  5& 5
+ \end{array}$
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{14}$&
+\begin{minipage}{0.08\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (-0.39,0.27)[e]{};
-\node(4) at (-0.09,0.27)[e]{};
-\node(3) at (0.38,-0.05)[e]{};
-\node(2) at (0.16,-0.05)[e]{};
-\node(1) at (-0.26,-0.36)[e]{};
+\node(5) at (0.4,0.33)[e]{};
+\node(4) at (0,0.33)[e]{};
+\node(3) at (-0.8,0)[e]{};
+\node(2) at (-0.4,0)[e]{};
+\node(1) at (0.2,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 14};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-Upper interval\\ in Sub$(A_6)$,\\
-algebra of\\ size 90\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2796,20 +2813,27 @@ algebra of\\ size 90\end{tabular}};
 \draw(0)--(1);
 \draw(0)--(2);
 \draw(0)--(3);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+Upper interval in Sub$(A_6)$,\\
+algebra of size 90\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{15}$&
+\begin{minipage}{0.08\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (0.26,0.36)[e]{};
-\node(4) at (-0.16,0.05)[e]{};
-\node(3) at (-0.38,0.05)[e]{};
-\node(2) at (0.08,-0.27)[e]{};
-\node(1) at (0.39,-0.27)[e]{};
+\node(5) at (0.2,0.33)[e]{};
+\node(4) at (-0.4,0)[e]{};
+\node(3) at (-0.8,0)[e]{};
+\node(2) at (0,-0.33)[e]{};
+\node(1) at (0.4,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 15};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,0,3,2)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2819,47 +2843,57 @@ algebra of\\ size 90\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
+    x& 0& 1& 2& 3\\\hline
+   f(x)& 1& 0& 3& 2\end{array}$
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{16}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (0.12,0.22)[e]{};
-\node(4) at (-0.37,0.22)[e]{};
-\node(3) at (-0.13,0.22)[e]{};
-\node(2) at (0.34,-0.09)[e]{};
-\node(1) at (-0.15,-0.39)[e]{};
+\node(5) at (-0.1,0.33)[e]{};
+\node(4) at (0.5,0.33)[e]{};
+\node(3) at (0.2,0.33)[e]{};
+\node(2) at (-0.66,0)[e]{};
+\node(1) at (0.25,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 16};
-\node at (0,1.1)[above]{\begin{tabular}{l}
+\node at (0,1.3){};
+\draw(5)--(6);
+\draw(4)--(6);
+\draw(3)--(6);
+\draw(2)--(6);
+\draw(1)--(3);
+\draw(1)--(4);
+\draw(1)--(5);
+\draw(0)--(1);
+\draw(0)--(2);
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
 Upper interval in Sub$(C_2.A_6)$\\
-algebra of size 180\end{tabular}};
-\node at (0,1.5){};
-\draw(5)--(6);
-\draw(4)--(6);
-\draw(3)--(6);
-\draw(2)--(6);
-\draw(1)--(3);
-\draw(1)--(4);
-\draw(1)--(5);
-\draw(0)--(1);
-\draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+algebra of size 180\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{17}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1.0)[e]{};
-\node(5) at (-0.14,0.39)[e]{};
-\node(4) at (0.34,0.09)[e]{};
-\node(3) at (0.12,-0.22)[e]{};
-\node(2) at (-0.11,-0.22)[e]{};
-\node(1) at (-0.37,-0.22)[e]{};
+\node(5) at (0.25,0.33)[e]{};
+\node(4) at (-0.66,0)[e]{};
+\node(3) at (0.2,-0.33)[e]{};
+\node(2) at (-0.1,-0.33)[e]{};
+\node(1) at (0.5,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 17};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,0,3,2,5,4,7,6,9,8,11,10)\\
-(4,7,5,6,8,11,9,10,0,3,1,2)\\
-(0,0,0,0,5,5,5,5,10,10,10,10)\\
-(filter-ideal in Sub$(A_4)$)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -2869,21 +2903,32 @@ algebra of size 180\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
-\node(6) at (0.01,0.91)[e]{};
-\node(5) at (0.35,0.27)[e]{};
-\node(4) at (-0.43,0.27)[e]{};
-\node(3) at (-0.03,0.27)[e]{};
-\node(2) at (0.34,-0.36)[e]{};
-\node(1) at (-0.25,-0.36)[e]{};
-\node(0) at (0.01,-1.0)[e]{};
-\node at (0,-1.25){\scs 18};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-Dual of 19, no explicit\\
-small representation known\end{tabular}};
-\node at (0,1.5){};
+\end{tikzpicture}
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccc}
+       x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9& 10& 11\\\hline
+    f(x)& 1& 0& 3& 2& 5& 4& 7& 6& 9& 8& 11& 10\\
+   g(x)& 4& 7& 5& 6& 8&11& 9&10& 0& 3&  1&  2\\
+   h(x)& 0& 0& 0& 0& 5& 5& 5& 5&10&10&10&10\end{array}$
+\begin{tabular}{l}
+Method: filter-ideal in Sub$(A_4)$
+\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{18}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+\node(6) at (0,1)[e]{};
+\node(5) at (0.5,0.33)[e]{};
+\node(4) at (-0.5,0.33)[e]{};
+\node(3) at (0,0.33)[e]{};
+\node(2) at (0.5,-0.33)[e]{};
+\node(1) at (-0.25,-0.33)[e]{};
+\node(0) at (0,-1)[e]{};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2892,23 +2937,27 @@ small representation known\end{tabular}};
 \draw(1)--(4);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
-\node(6) at (-0.01,1.0)[e]{};
-\node(5) at (0.26,0.36)[e]{};
-\node(4) at (-0.35,0.36)[e]{};
-\node(3) at (0.44,-0.27)[e]{};
-\node(2) at (0.04,-0.27)[e]{};
-\node(1) at (-0.36,-0.27)[e]{};
-\node(0) at (-0.01,-0.91)[e]{};
-\node at (0,-1.25){\scs 19};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,1,0,4,5,5,4)\\
-(0,2,3,1,0,2,3,1)\\
-(7,6,6,7,3,2,2,3)
-\end{tabular}};
-\node at (0,1.5){};
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+Dual of 19, no explicit\\
+small representation known\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{19}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+\node(6) at (0,1)[e]{};
+\node(5) at (-0.25,0.33)[e]{};
+\node(4) at (0.5,0.33)[e]{};
+\node(3) at (-0.5,-0.33)[e]{};
+\node(2) at (0,-0.33)[e]{};
+\node(1) at (0.5,-0.33)[e]{};
+\node(0) at (0,-1)[e]{};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -2917,20 +2966,29 @@ small representation known\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
-\node(6) at (-0.24,0.9)[e]{};
-\node(5) at (0.28,0.43)[e]{};
-\node(4) at (-0.07,0.2)[e]{};
-\node(3) at (-0.45,-0.03)[e]{};
-\node(2) at (0.57,-0.03)[e]{};
-\node(1) at (0.16,-0.5)[e]{};
-\node(0) at (-0.24,-0.97)[e]{};
-\node at (0,-1.25){\scs 20};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(SmallGroup(216,153) in GAP)\end{tabular}};
-\node at (0,1.5){};
+\end{tikzpicture}
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccc}
+   x& 0& 1& 2& 3& 4& 5& 6& 7\\\hline
+f(x)& 0& 1& 1& 0& 4& 5& 5& 4\\
+g(x)& 0& 2& 3& 1& 0& 2& 3& 1\\
+h(x)& 7& 6& 6& 7& 3& 2& 2& 3\end{array}$
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{20}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+\node(6) at (0,1)[e]{};
+\node(5) at (0.44,0.66)[e]{};
+\node(4) at (0,0.33)[e]{};
+\node(3) at (-0.66,0)[e]{};
+\node(2) at (0.44,0)[e]{};
+\node(1) at (0,-0.33)[e]{};
+\node(0) at (0,-1)[e]{};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2939,23 +2997,26 @@ small representation known\end{tabular}};
 \draw(1)--(4);
 \draw(0)--(1);
 \draw(0)--(3);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
-\node(6) at (0.25,0.97)[e]{};
-\node(5) at (-0.15,0.5)[e]{};
-\node(4) at (-0.59,0.03)[e]{};
-\node(3) at (0.46,0.03)[e]{};
-\node(2) at (0.1,-0.2)[e]{};
-\node(1) at (-0.31,-0.43)[e]{};
-\node(0) at (0.25,-0.9)[e]{};
-\node at (0,-1.25){\scs 21};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(3,3,4,8,8,2,2,3,4)\\
-(0,0,6,1,1,0,0,5,6)\\
-(4,5,5,7,8,8,7,4,4)\\
-(In Equ(9))\end{tabular}};
-\node at (0,1.5){};
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+SmallGroup(216,153) in GAP\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{21}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+\node(6) at (0,1)[e]{};
+\node(5) at (0,0.33)[e]{};
+\node(4) at (0.44,0)[e]{};
+\node(3) at (-0.66,0)[e]{};
+\node(2) at (0,-0.33)[e]{};
+\node(1) at (0.44,-0.66)[e]{};
+\node(0) at (0,-1)[e]{};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(5);
 \draw(3)--(6);
@@ -2964,9 +3025,21 @@ small representation known\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccccccc}
+   x& 0& 1& 2& 3& 4& 5& 6& 7& 8\\\hline
+f(x)& 3& 3& 4& 8& 8& 2& 2& 3& 4\\
+g(x)& 0& 0& 6& 1& 1& 0& 0& 5& 6\\
+h(x)& 4& 5& 5& 7& 8& 8& 7& 4& 4\end{array}$
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{22}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (-0.33,0.5)[e]{};
 \node(4) at (0,0.5)[e]{};
@@ -2974,13 +3047,7 @@ small representation known\end{tabular}};
 \node(2) at (-0.33,0)[e]{};
 \node(1) at (-0.33,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 22};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-Dual of 23, no\\
-explicit small\\
-representation\\
-known\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -2989,9 +3056,21 @@ known\end{tabular}};
 \draw(1)--(2);
 \draw(0)--(1);
 \draw(0)--(3);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+Dual of 23, no\\
+explicit small\\
+representation\\
+known\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{23}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (-0.33,0.5)[e]{};
 \node(4) at (-0.33,0)[e]{};
@@ -2999,14 +3078,7 @@ known\end{tabular}};
 \node(2) at (-0.33,-0.5)[e]{};
 \node(1) at (0,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 23};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,0,1,4,4)\\
-(1,1,3,3,4,5)\\
-(3,2,3,2,5,5)\\
-(4,1,5,3,4,5)
-\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(5);
 \draw(3)--(6);
@@ -3015,21 +3087,30 @@ known\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
-\node(6) at (-0.0,0.91)[e]{};
-\node(5) at (0.0,0.27)[e]{};
-\node(4) at (0.5,0.27)[e]{};
-\node(3) at (-0.5,0.27)[e]{};
-\node(2) at (0.33,-0.36)[e]{};
-\node(1) at (-0.33,-0.36)[e]{};
-\node(0) at (-0.0,-1.0)[e]{};
-\node at (0,-1.25){\scs 24 ($L_2$)};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,1,2,2)\\
-(2,3,3,2)\end{tabular}};
-\node at (0,1.5){};
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,1,0,1,4,4)\\
+(1,1,3,3,4,5)\\
+(3,2,3,2,5,5)\\
+(4,1,5,3,4,5)
+\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{24}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+\node(6) at (0,1)[e]{};
+\node(5) at (0,0.33)[e]{};
+\node(4) at (0.5,0.33)[e]{};
+\node(3) at (-0.5,0.33)[e]{};
+\node(2) at (0.5,-0.33)[e]{};
+\node(1) at (-0.5,-0.33)[e]{};
+\node(0) at (0,-1)[e]{};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -3039,23 +3120,27 @@ known\end{tabular}};
 \draw(1)--(5);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
-\node(6) at (0.01,1.0)[e]{};
-\node(5) at (-0.34,0.36)[e]{};
-\node(4) at (0.33,0.36)[e]{};
-\node(3) at (-0.5,-0.27)[e]{};
-\node(2) at (0.5,-0.27)[e]{};
-\node(1) at (-0.01,-0.27)[e]{};
-\node(0) at (0.01,-0.91)[e]{};
-\node at (0,-1.25){\scs 25 ($L_1$)};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,0,2,2,2)\\
-(0,1,0,1,1)\\
-(1,1,4,4,4)\\
-(2,3,2,3,3)\end{tabular}};
-\node at (0,1.5){};
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(1,1,2,2)\\
+(2,3,3,2)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{25}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+\node(6) at (0,1)[e]{};
+\node(5) at (-0.5,0.33)[e]{};
+\node(4) at (0.5,0.33)[e]{};
+\node(3) at (-0.5,-0.33)[e]{};
+\node(2) at (0.5,-0.33)[e]{};
+\node(1) at (0,-0.33)[e]{};
+\node(0) at (0,-1)[e]{};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3065,9 +3150,21 @@ known\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,0,2,2,2)\\
+(0,1,0,1,1)\\
+(1,1,4,4,4)\\
+(2,3,2,3,3)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{26}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (-0.25,0.94)[e]{};
 \node(5) at (0.14,0.47)[e]{};
 \node(4) at (-0.4,0.0)[e]{};
@@ -3075,13 +3172,7 @@ known\end{tabular}};
 \node(2) at (0.51,0.0)[e]{};
 \node(1) at (0.14,-0.47)[e]{};
 \node(0) at (-0.25,-0.94)[e]{};
-\node at (0,-1.25){\scs 26};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,0,3,2,0,2)\\
-(4,4,5,5,1,3)\\
-(0,0,0,0,1,1)\\
-(3,5,3,5,3,3)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3090,9 +3181,21 @@ known\end{tabular}};
 \draw(1)--(3);
 \draw(0)--(1);
 \draw(0)--(4);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(1,0,3,2,0,2)\\
+(4,4,5,5,1,3)\\
+(0,0,0,0,1,1)\\
+(3,5,3,5,3,3)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{27}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (0.33,0.5)[e]{};
 \node(4) at (-0.33,0.25)[e]{};
@@ -3100,17 +3203,7 @@ known\end{tabular}};
 \node(2) at (-0.33,-0.25)[e]{};
 \node(1) at (0.33,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 27};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,2,3,4,5,0,0,0,0,0,2,2,2,2,2)\\
-(4,5,3,4,5,3,5,3,4,5,3,4,5,4,5,3)\\
-(2,2,1,5,5,4,2,1,5,5,4,2,2,5,5,4)\\
-(3,4,4,0,1,1,4,4,0,1,1,3,4,0,1,1)\\
-(0,6,7,8,9,10,6,7,8,9,10,0,6,8,9,10)\\
-(11,12,2,13,14,15,12,2,13,14,15,\\
-11,12,13,14,15)
-\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3118,9 +3211,25 @@ known\end{tabular}};
 \draw(1)--(3);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,1,2,3,4,5,0,0,0,0,0,2,2,2,2,2)\\
+(4,5,3,4,5,3,5,3,4,5,3,4,5,4,5,3)\\
+(2,2,1,5,5,4,2,1,5,5,4,2,2,5,5,4)\\
+(3,4,4,0,1,1,4,4,0,1,1,3,4,0,1,1)\\
+(0,6,7,8,9,10,6,7,8,9,10,0,6,8,9,10)\\
+(11,12,2,13,14,15,12,2,13,14,15,\\
+11,12,13,14,15)
+\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{28}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (0.33,0.6)[e]{};
 \node(4) at (-0.33,0)[e]{};
@@ -3128,17 +3237,7 @@ known\end{tabular}};
 \node(2) at (0.33,-0.2)[e]{};
 \node(1) at (0.33,-0.6)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 28};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,2,3,4,5,0,0,0,0,0,2,2,2,2,2)\\
-(3,3,4,3,3,4,3,4,3,3,4,3,3,3,3,4)\\
-(1,0,0,4,3,3,0,0,4,3,3,1,0,4,3,3)\\
-(4,5,5,1,2,2,5,5,1,2,2,4,5,1,2,2)\\
-(0,6,7,8,9,10,6,7,8,9,10,0,6,8,9,10)\\
-(11,12,2,13,14,15,12,2,13,14,15,\\
-11,12,13,14,15)
-\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3146,9 +3245,25 @@ known\end{tabular}};
 \draw(1)--(2);
 \draw(0)--(1);
 \draw(0)--(4);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,1,2,3,4,5,0,0,0,0,0,2,2,2,2,2)\\
+(3,3,4,3,3,4,3,4,3,3,4,3,3,3,3,4)\\
+(1,0,0,4,3,3,0,0,4,3,3,1,0,4,3,3)\\
+(4,5,5,1,2,2,5,5,1,2,2,4,5,1,2,2)\\
+(0,6,7,8,9,10,6,7,8,9,10,0,6,8,9,10)\\
+(11,12,2,13,14,15,12,2,13,14,15,\\
+11,12,13,14,15)
+\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{29}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (-0.19,0.98)[e]{};
 \node(5) at (0.38,0.49)[e]{};
 \node(4) at (-0.25,0.25)[e]{};
@@ -3156,11 +3271,7 @@ known\end{tabular}};
 \node(2) at (-0.52,-0.25)[e]{};
 \node(1) at (0.15,-0.49)[e]{};
 \node(0) at (-0.19,-0.98)[e]{};
-\node at (0,-1.25){\scs 29};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,0,3,2,2)\\
-(2,4,2,4,3)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3169,9 +3280,19 @@ known\end{tabular}};
 \draw(1)--(4);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(1,0,3,2,2)\\
+(2,4,2,4,3)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{30}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (-0.19,0.98)[e]{};
 \node(5) at (0.15,0.49)[e]{};
 \node(4) at (-0.52,0.25)[e]{};
@@ -3179,11 +3300,7 @@ known\end{tabular}};
 \node(2) at (-0.25,-0.25)[e]{};
 \node(1) at (0.38,-0.49)[e]{};
 \node(0) at (-0.19,-0.98)[e]{};
-\node at (0,-1.25){\scs 30};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,3,4,3,4)\\
-(2,2,1,4,3)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3192,9 +3309,19 @@ known\end{tabular}};
 \draw(1)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,3,4,3,4)\\
+(2,2,1,4,3)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{31}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0.09,0.99)[e]{};
 \node(5) at (-0.3,0.51)[e]{};
 \node(4) at (0.43,0.27)[e]{};
@@ -3202,12 +3329,7 @@ known\end{tabular}};
 \node(2) at (-0.37,-0.45)[e]{};
 \node(1) at (0.27,-0.45)[e]{};
 \node(0) at (0.09,-0.93)[e]{};
-\node at (0,-1.25){\scs 31};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,1,0,0)\\
-(1,1,2,2,2)\\
-(3,2,2,4,4)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3216,9 +3338,20 @@ known\end{tabular}};
 \draw(1)--(4);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,1,1,0,0)\\
+(1,1,2,2,2)\\
+(3,2,2,4,4)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{32}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0.09,0.93)[e]{};
 \node(5) at (0.28,0.45)[e]{};
 \node(4) at (-0.37,0.45)[e]{};
@@ -3226,13 +3359,7 @@ known\end{tabular}};
 \node(2) at (0.44,-0.27)[e]{};
 \node(1) at (-0.32,-0.52)[e]{};
 \node(0) at (0.09,-1.0)[e]{};
-\node at (0,-1.25){\scs 32};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,1,3,3)\\
-(1,2,2,4,4)\\
-(3,3,4,3,4)
-\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3241,9 +3368,21 @@ known\end{tabular}};
 \draw(1)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,1,1,3,3)\\
+(1,2,2,4,4)\\
+(3,3,4,3,4)
+\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{33}$&
+\begin{minipage}{0.12\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (1,0)[e]{};
 \node(4) at (0.5,0)[e]{};
@@ -3251,12 +3390,7 @@ known\end{tabular}};
 \node(2) at (-0.5,0)[e]{};
 \node(1) at (-1,0)[e]{};
 \node(0) at (0,-1)[e]{};
-\node at (0,-1.25){\scs 33 $(M_5)$};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,3,2,0,9,11,10,8,13,15,14,12,5,7,6,4)\\
-(11,8,10,9,7,4,6,5,15,12,14,13,3,0,2,1)\\
-(14,15,12,13,10,11,8,9,6,7,4,5,2,3,0,1)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -3267,9 +3401,20 @@ known\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(4);
 \draw(0)--(5);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(1,3,2,0,9,11,10,8,13,15,14,12,5,7,6,4)\\
+(11,8,10,9,7,4,6,5,15,12,14,13,3,0,2,1)\\
+(14,15,12,13,10,11,8,9,6,7,4,5,2,3,0,1)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{34}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0.0,0.91)[e]{};
 \node(5) at (0.24,0.27)[e]{};
 \node(4) at (-0.42,0.27)[e]{};
@@ -3277,10 +3422,7 @@ known\end{tabular}};
 \node(2) at (0.39,-0.36)[e]{};
 \node(1) at (-0.13,-0.36)[e]{};
 \node(0) at (0.0,-1.0)[e]{};
-\node at (0,-1.25){\scs 34};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(0,1,3,2)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(6);
@@ -3290,9 +3432,18 @@ known\end{tabular}};
 \draw(1)--(5);
 \draw(0)--(1);
 \draw(0)--(2);
-\end{tikzpicture}\end{tabular}
-\begin{tabular}{l}\begin{tikzpicture}
-    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(0,1,3,2)\end{tabular}
+\end{tabular}
+
+\begin{tabular}{ccc}
+$\bL_{35}$&
+\begin{minipage}{0.07\textwidth}
+\begin{tikzpicture}
+    [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
 \node(5) at (-0.14,0.36)[e]{};
 \node(4) at (0.4,0.36)[e]{};
@@ -3300,11 +3451,7 @@ known\end{tabular}};
 \node(2) at (-0.1,-0.27)[e]{};
 \node(1) at (0.24,-0.27)[e]{};
 \node(0) at (0.01,-0.91)[e]{};
-\node at (0,-1.25){\scs 35};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,1,2,3)\\
-(2,3,3,3)\end{tabular}};
-\node at (0,1.5){};
+\node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
 \draw(3)--(5);
@@ -3314,8 +3461,14 @@ known\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(2);
 \draw(0)--(1);
-\end{tikzpicture}\end{tabular}
-\end{center}
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{tabular}{l}
+(1,1,2,3)\\
+(2,3,3,3)\end{tabular}
+\end{tabular}
+
 %% -- End conglattices7.tex file insertion -------------------------------
 
 
