fixed reference to definition of h function

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -912,12 +912,13 @@ which is the set of all unary maps on $X$ which respect all relations in $L$.
   there is a pair 
   $(a,b) \in \alpha \setminus \theta$.  Since $\theta \notin \downbeta$, there is
   a pair $(u,v)\in \theta\setminus \beta$. Define $h\in X^X$ as follows:
-  \begin{equation*}
+  \begin{equation}
+    \label{eq:h}
     h(x) = \begin{cases}
       a,& \quad x\in u/\beta,\\
       b,& \quad \text{ otherwise.}
     \end{cases}
-  \end{equation*}
+  \end{equation}
   Then, $\beta \leq \ker h = (u/\beta)^2 \cup ((u/\beta)^c)^2$, where $(u/\beta)^c$ denotes the
   complement of the $\beta$ class containing $u$.  Therefore, $h$ respects every
   $\gamma \leq \beta$.  Furthermore, $(a, b) \in \gamma$ for all $\gamma \geq \alpha$,
