--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -194,7 +194,7 @@ MRREVIEWER = {E. W. Kiss},
   }
   @Unpublished{Netter:1986,
     author = 	 {Netter, R.},
-    title = 	 {Eine Bemerkung zu Kongruenzverbanden},
+    title = 	 {Eine {B}emerkung zu {K}ongruenzverb{\"a}nden},
     note = 	 {preprint},
     OPTkey = 	 {},
     OPTmonth = 	 {},
@@ -1055,7 +1055,7 @@ x&\text{otherwise.}\end{cases}$$
 %\newpage
 
 \begin{theorem}
-  Suppose $\m A=(A,F)$ and $\m B=(B,G)$ are unary algebras with
+  Suppose $\m A=\<A,F\>$ and $\m B=\<B,G\>$ are unary algebras with
   $A=\{a_0,\dots,a_{m-1}\}$, $B=\{b_0,\dots,b_{n-1}\}$ and 
   $A\cap B=\{a_0\}=\{b_0\}$ $($so $a_0,b_0$ are identified$)$. Let $\m C$ be the
   algebra $\m A_{m,n}$ expanded with the operations 
