--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -614,7 +614,7 @@ algebras is closed under the following operations:
 \begin{enumerate} %[label=$\circ$]
 \setcounter{enumi}{-1}
 \item\label{item:0} principal filters: all elements above a given element (the
-Correspondence Theorem~\cite{Bergman2012}),
+correspondence theorem~\cite{Bergman2012}),
 \item\label{item:1} lattice duals (Hans Kurzweil~\cite{Kurzweil:1985} and Raimund Netter~\cite{Netter:1986}, 1986),
 \item\label{item:2} interval sublattices (follows from~(\ref{item:1}), see Remark a. below),
 \item  direct products (\Jiri \Tuma~\cite{Tuma:1986}, 1986), 
