--- a/article/inputs/tikz/general-ordinal-sum.tex
+++ b/article/inputs/tikz/general-ordinal-sum.tex
@@ -9,7 +9,7 @@
 \draw (0,5.5) node {$\vdots$};
 \draw 
 (botL1) to [out=50,in=-50] (topL1)
-(botL1) to [out=130,in=-130] (topL1) to (botL2) to [out=50,in=-50] (topL2)
-(botL2) to [out=130,in=-130] (topL2) to (04)
+(botL1) to [out=130,in=-130] (topL1) (topL1) to (botL2) to [out=50,in=-50] (topL2)
+(botL2) to [out=130,in=-130] (topL2) (topL2) to (04)
 (06) to (botLn) to [out=50,in=-50] (topLn)
 (botLn) to [out=130,in=-130] (topLn);
