--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -586,9 +586,9 @@ If this were known to be true, then the
 \emph{finite lattice representation problem} would be solved.
 The congruence lattice of the algebra consisting of a
 set $X$ with no operations is the lattice of all equivalence relations on $X$,
-which we denote by $\Eq X$.
+which we denote by $\EqX$.
 By a celebrated theorem of \Pudlak and \Tuma~\cite{Pudlak:1980}, for every finite
-lattice $L$ there is a finite set $X$ such that $L\leq \Eq X$.  Therefore, $\sL$
+lattice $L$ there is a finite set $X$ such that $L\leq \EqX$.  Therefore, $\sL$
 would contain all finite lattices if it were closed under $\sansS$.
 
 
@@ -871,7 +871,7 @@ Given a relation $\theta \subseteq X\times X$, we say that the map
 $f: X^n\rightarrow X$ \emph{respects} $\theta$ and we write 
 $f(\theta) \subseteq \theta$ provided $(x_i, y_i)\in \theta$ implies
 $(f(x_1, \dots, x_n), f(y_1, \dots, y_n))\in \theta$.
-For a set $L\subseteq \Eq X$ of equivalence relations we define
+For a set $L\subseteq \EqX$ of equivalence relations we define
 \[
 \lambda(L) = \{f\in X^X: (\forall \theta \in L) \; f(\theta) \subseteq \theta \},
 \]
@@ -928,7 +928,7 @@ which is the set of all unary maps on $X$ which respect all relations in $L$.
   $\gamma \in \upalpha\cup \downbeta = L_0$, but violates $\theta$.  Finally,
   since 
   $\bL_0 \leq \bL$, we have $\lambda(L)\subseteq \lambda(L_0)$.  Combining these
-  observations, we see that every $\theta \in \Eq X \setminus L_0$ is
+  observations, we see that every $\theta \in \EqX \setminus L_0$ is
   violated by some function in $\lambda(L_0)$. Therefore, $\bL_0 = \bCon \< X, \lambda(L_0)\>$.
 \end{proof}
 
@@ -993,7 +993,7 @@ obviously representable.
 \newcommand{\m}{\mathbf}
 
 The lattice of equivalence relations on an $n$-element set is denoted by
-Equ$(n)$. For two lattices $\m L,\m M$ the \emph{adjoined ordinal sum}  
+$\bEq(n)$. For two lattices $\m L,\m M$ the \emph{adjoined ordinal sum}  
 is denoted by $\m L\oplus_a \m M$ and is defined on $L\uplus (M\setminus\{0\})$
 by $x\le y$ iff $x\in L,y\in M$ or ($x,y\in L$ and $x\le^\m L y$) or ($x,y\in M$
 and $x\le^\m M y$). 
@@ -1003,9 +1003,9 @@ and let $\m L=\text{Con}(\m A)$ and $\m M=\text{Con}(\m B)$.
 In \cite{Snow:2000} it is proved that $\m L\oplus_a\m M$ is isomorphic to the
 congruence lattice of some finite algebra $\m C$. Although the algebra $\m C$ is
 not explicitly constructed, it is based on the direct product of $\m A$ and $\m
-B$, hence the ordinal sum is a sublattice of Equ$(mn)$. Here we give a different
+B$, hence the ordinal sum is a sublattice of $\Eq(mn)$. Here we give a different
 construction of $\m C$ that leads to a tighter representation of Con$(\m C)$ as
-a sublattice of Equ$(m+n-1)$.  
+a sublattice of $\Eq(m+n-1)$.  
 %If $\m A$ and $\m B$ are minimal-size algebras that have congruence lattices
 %isomorphic to $\m L$ and $\m M$ respectively, then $\m C$ will also be a
 %minimal-size algebra with congruence lattice isomorphic to $\m L\oplus_a\m M$. 
@@ -1019,14 +1019,14 @@ x&\text{otherwise.}\end{cases}$$
 
 \begin{lemma}
   For $m,n\ge 1$ the lattice $\mathrm{Con}(\m A_{m,n})$ is isomorphic to
-  $\mathrm{Equ}(m)\oplus_a \mathrm{Equ}(n)$. 
+  $\Eq(m)\oplus_a \Eq(n)$. 
 \end{lemma}
 \begin{proof}
   Let $\alpha$ be the equivalence relation
   $A^2\cup\{(b_1,b_1),\dots,(b_{n-1},b_{n-1})\}$, so as a partition it is  
   $a_0,\dots,a_{m-1}|b_1|b_2|\dots|b_{n-1}$. 
-  Note that Equ$(m)\oplus_a \text{Equ}(n)$ is isomorphic to the sublattice
-  of Equ$(A\uplus B_1)$ of all equivalence relations comparable to $\alpha$, since
+  Note that $\Eq(m)\oplus_a \Eq(n)$ is isomorphic to the sublattice
+  of $\Eq(A\uplus B_1)$ of all equivalence relations comparable to $\alpha$, since
   $\alpha$ has a unique non-singleton block of size $m$, and $n$ blocks
   altogether. We claim that this sublattice is the congruence lattice of $\m
   A_{m,n}$.  
@@ -1072,7 +1072,7 @@ x&\text{otherwise.}\end{cases}$$
 \begin{proof}
   Since $\m C$ is an expansion of $\m A_{m,n}$ it follows from the preceding lemma
   that Con$(\m C)$ is a sublattice of 
-  $\{\theta\in \text{Equ}(A\cup B):\theta\le\alpha$ or $\alpha\le\theta\}$ where,
+  $\{\theta\in \Eq(A\cup B):\theta\le\alpha$ or $\alpha\le\theta\}$ where,
   as before, $\alpha=A^2\cup\text{id}_B$. Note that $\alpha\in\text{Con}(\m C)$,
   so it suffices to show that $\{\theta\in\text{Con}(\m C):\theta\le\alpha\}$ is
   isomorphic to Con$(\m A)$ and $\{\theta\in\text{Con}(\m C):\theta\le\alpha\}$ 
@@ -1109,8 +1109,8 @@ In this section, we introduce a strategy that has proven very useful for showing
 that a given lattice is representable as a congruence lattice of a finite
 algebra. We call it the \defn{closure method}, and it has become especially
 useful with the advent of powerful computers which can search for such
-representations.  Here,  $\Eq X$ denotes the lattice of equivalence
-relations on $X$. Sometimes we abuse notation and take $\Eq X$ to mean the
+representations.  Recall that  $\EqX$ denotes the lattice of equivalence
+relations on $X$. Sometimes we abuse notation and take $\EqX$ to mean the
 lattice of partitions of the set $X$. This never causes problems because these
 two lattices are isomorphic.  
 
@@ -1131,10 +1131,10 @@ spanning sublattice\footnote{Recall, by a
   \defn{spanning sublattice}
   of a bounded lattice $L_0$, we mean a sublattice $L\leq L_0$ that has the same top and
   bottom as $L_0$.  That is  $1_L = 1_{L_0}$ and $0_L = 0_{L_0}$.}
-of the lattice $\Eq X$ of equivalence relations on a finite set $X$.   
+of the lattice $\EqX$ of equivalence relations on a finite set $X$.   
 Given this result, we see that even if our goal is to solve the abstract
 representation problem for some (abstract) lattice $L$, then
-we can embed $L$ into $\Eq X$ as $L\cong L_0\leq \Eq X$, for some finite set
+we can embed $L$ into $\EqX$ as $L\cong L_0\leq \EqX$, for some finite set
 $X$, and then try to solve the concrete representation problem for $L_0$.  
 
 A point of clarification is in order here.  The term 
@@ -1142,7 +1142,7 @@ A point of clarification is in order here.  The term
 has become a bit overused in the literature about the finite lattice
 representation problem.  On the one hand, given a finite lattice $L$, if there
 is a finite algebra $\bA$ such that $L \cong \Con \bA$, then $L$ is called a
-\defn{representable lattice}.  On the other hand, given a sublattice $L_0\leq \Eq X$, 
+\defn{representable lattice}.  On the other hand, given a sublattice $L_0\leq \EqX$, 
 if $L_0\cong L$, then $L_0$ is sometimes called a 
 \defn{concrete representation}
 of the lattice $L$ (whether or not it is the congruence lattice of an algebra).    
@@ -1151,14 +1151,14 @@ have this special kind of concrete representation of a give lattice, then that
 lattice is indeed representable in the first sense.
 
 As we will see below, there are many examples in which a particular concrete
-representation $L_0\leq \Eq X$ of $L$ is not a congruence lattice of a
+representation $L_0\leq \EqX$ of $L$ is not a congruence lattice of a
 finite algebra.  (In fact, we will describe general situations in which we can
 guarantee that there are no non-trivial\footnote{By a 
   \defn{non-trivial function} we mean a function that is
   not constant and not the identity.} operations which respect the equivalence
 relations of $L_0$.)  This does not imply that $L \notin \sL$.  It may
 simply mean that $L_0$ is not the ``right'' concrete representation of $L$, and
-perhaps we can find some other $L \cong L_1\leq \Eq X$ such that $L_1 = \Con
+perhaps we can find some other $L \cong L_1\leq \EqX$ such that $L_1 = \Con
 \<X, \lambda(L_1)\>$.
 
 \subsection{The closure method}
@@ -1172,37 +1172,37 @@ at the University of Waterloo, by R.~Quackenbush and B.~Wolk at the University
 of Manitoba, and by B.~J\'{o}nsson at Vanderbilt University.''
 
 Let $X^X$ denote the set of all (unary) maps from the set $X$ to itself, and let 
-$\Eq X$ denote the lattice of equivalence relations on the set $X$.  If $\theta
-\in \Eq X$ and $h\in X^X$, we write $h(\theta) \subseteq \theta$ and say
+$\EqX$ denote the lattice of equivalence relations on the set $X$.  If $\theta
+\in \EqX$ and $h\in X^X$, we write $h(\theta) \subseteq \theta$ and say
 that ``$h$ respects $\theta$'' if and only if for all $(x,y)\in X^2$ $(x,y)\in
 \theta$ implies 
 $(h(x),h(y)) \in \theta$.  If $h(\theta) \nsubseteq \theta$, we sometimes say
 that ``$h$ violates $\theta$.''
 
-For $L\subseteq \Eq X$ define
+For $L\subseteq \EqX$ define
 \[
 \lambda(L) = \{h\in X^X: (\forall \theta \in L) \; h(\theta) \subseteq \theta \}.
 \]
 
 For $H\subseteq X^X$ define
 \[
-\rho(H) = \{\theta \in \Eq X \mid   (\forall h\in H) \; h(\theta) \subseteq \theta\}.
+\rho(H) = \{\theta \in \EqX \mid   (\forall h\in H) \; h(\theta) \subseteq \theta\}.
 \]
-The map $\rho \lambda$ is a \defn{closure operator} on $\Sub(\Eq X)$.
+The map $\rho \lambda$ is a \defn{closure operator} on $\Sub(\EqX)$.
 That is, $\rho \lambda$ is
 \begin{itemize}
 \item \emph{idempotent:}\footnote{In fact, $\rho \lambda \rho = \rho$ and 
   $\lambda \rho \lambda = \lambda$.} $\rho \lambda \rho \lambda = \rho \lambda$;
-\item \emph{extensive:} $L \subseteq \rho \lambda (L)$ for every $L \leq \Eq X$;
+\item \emph{extensive:} $L \subseteq \rho \lambda (L)$ for every $L \leq \EqX$;
 \item \emph{order preserving:} $\rho \lambda (L) \leq \rho \lambda (L_0)$ if $L \leq L_0$.
 \end{itemize}
-Given $L\leq \Eq X$, if $\rho\lambda(L) = L$, then we say $L$ is a 
-%\defn{closed sublattice of $\Eq X$}, in which case we clearly have
-\emph{closed} sublattice of $\Eq X$, in which case we clearly have
+Given $L\leq \EqX$, if $\rho\lambda(L) = L$, then we say $L$ is a 
+%\defn{closed sublattice of $\EqX$}, in which case we clearly have
+\emph{closed} sublattice of $\EqX$, in which case we clearly have
 \[L = \Con \<X, \lambda(L)\>.\]
 This suggests the following strategy for solving the representation problem for a
 given abstract finite lattice $L$: search for a concrete representation $L \cong
-L_0\leq \Eq X$,
+L_0\leq \EqX$,
 compute $\lambda(L_0)$, compute $\rho\lambda(L_0)$, and determine whether 
 $\rho\lambda(L_0) = L_0$.  If so, then we have solved the abstract representation
 problem for $L$, by finding a \defn{closed concrete representation}, or simply
