--- a/article/inputs/macros.sty
+++ b/article/inputs/macros.sty
@@ -85,6 +85,7 @@
 %% wjd: should we use bold for tuples?
 \newcommand{\bx}{\ensuremath{\mathbf{x}}}
 \newcommand{\by}{\ensuremath{\mathbf{y}}}
+\newcommand{\bz}{\ensuremath{\mathbf{z}}}
 
 %% wjd: can we use n underbar for the set {0,1,...,n-1}?
 \newcommand{\nn}{\ensuremath{\underline{n}}}
