--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -2446,12 +2446,13 @@ with a smaller algebra by using a group of larger order.
 %%%% \input{inputs/conglattices7.tex}  (include all major inputs in one file)
 %% -- Begin conglattices7.tex file insertion -------------------------------
 
-Distributive lattices and lattices that are ordinal sums of smaller lattices are omitted.
-The base set of each algebra is $\{0,1,\dots,n-1\}$, and each unary operation is
+Distributive lattices and lattices that are ordinal sums of smaller lattices are omitted. This leaves 35 lattices listed below with the names $\bL_1,\ldots,\bL_{35}$. In most cases, each lattice $\bL_i$ is followed by a
+unary algebra denoted $\bB_i$ with the property that $\bL_i=\Con(\bB_i)$.
+The base set of each algebra is $\{0,1,\dots,n-1\}$, and each unary operation $f,g,h,\ldots$ is
 specified by a vector of values of these elements.  Algebras of size less than
-$11$ are known to be minimal-size algebras that produce the corresponding
-congruence lattice. The algebra for 33 $(M_5)$ is also known to be minimal in
-size. Currently only one of the lattices (10) is not known to be the congruence
+$11$ \marginpar{PJ: should this be less than or equal to 11???} are known to be minimal-size algebras that produce the corresponding
+congruence lattice. The algebra $\bB_{33}$ is also known to be minimal in
+size. Currently only $\bL_{10}$ is not known to be the congruence
 lattice of a finite algebra. 
 
 %Thirteen of the 35 lattices below are subdirectly reducible (specifically: 6, 7,12, 13, 26, 27, 28, 29, 30, 31, 32, 34, 35). 
