work on the introduction.

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -549,6 +549,40 @@ MRREVIEWER = {Andrea Lucchini},
 %/////////////////////////////////////////////////////////
 \section{Introduction}
 \label{sec:intro}
+%the problem
+%we investigate methods of showing that certain lattices are representable
+%we show every lattice with 7 or less elements is representable with one
+%possible exception.
+%minimal, group (P^5), etc. 
+%also we have extend P^5 and McKenzie results on conditions that
+%force the min rep to be a group action. Also we have conditions
+%guaranteeing a group action represents must be transitive.
+
+By the Gratz\"er-Schmidt Theorem every algebraic, and hence
+every finite, lattice is the congruence lattice of an algebra. 
+But the algebras in this construction are always infinite
+even when the lattice is finite. This leaves the question:
+\emph{is every finite lattice isomorphic to the congruence
+lattice of a finite algebra?} In 1980 P.~P. \Palfy and P.~\Pudlak
+showed that every finite lattice is isomorphic to the congruence
+lattice of a finite algebra if and only every finite lattice is
+isomorphic to an interval in the subgroups lattice of a finite 
+group. If $L$ is isomorphic to the lattice of subgroups of $G$
+containing a subgroup $H$, then $L$ is isomorphic to the congruence
+lattice of the algebra whose elements are the let cosets of $H$
+and whose operations are the left multiplication by elements of~$G$;
+that is, the group action of $G$ on the left cosets of~$H$;
+see~\cite{alvi:1987}.
+However the \Palfy-\Pudlak theorem does not prove that if $L$
+is a congruence lattice of a finite lattice that it 
+is (isomorphic to) an interval of a subgroup lattice of finite
+group, although the opposite implication is obviously true.
+
+
+
+\todo{check the gg statement}
+
+
 \todo{Expand the introduction.}
 
 %%%% \input{inputs/intro.tex}  (include all major inputs in one file)
