--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -568,19 +568,34 @@ But the algebras in this construction are always infinite
 even when the lattice is finite. This leaves the question:
 \emph{is every finite lattice isomorphic to the congruence
 lattice of a finite algebra?} In 1980 P.~P. \Palfy and P.~\Pudlak
-showed that every finite lattice is isomorphic to the congruence
-lattice of a finite algebra if and only every finite lattice is
+reduced this to a group theoretic problem by showing the following
+two statements are equivalent.
+\begin{enumerate}
+\item
+Every finite lattice is isomorphic to the congruence
+lattice of a finite algebra.
+\item
+Every finite lattice is
 isomorphic to an interval in the subgroups lattice of a finite 
-group. If $L$ is isomorphic to the lattice of subgroups of $G$
+group.
+\end{enumerate}
+
+
+If $L$ is isomorphic to the lattice of subgroups of $G$
 containing a subgroup $H$, then $L$ is isomorphic to the congruence
-lattice of the algebra whose elements are the let cosets of $H$
-and whose operations are the left multiplication by elements of~$G$;
+lattice of the algebra whose elements are the left cosets of $H$
+and whose operations are left multiplication by elements of~$G$;
 that is, the group action of $G$ on the left cosets of~$H$;
 see~\cite{alvi:1987}.
-However the \Palfy-\Pudlak theorem does not prove that if $L$
+However the \Palfy-\Pudlak theorem does not prove that if 
+a particular lattice $L$
 is a congruence lattice of a finite lattice that it 
-is (isomorphic to) an interval of a subgroup lattice of finite
-group, although the opposite implication is obviously true.
+is (isomorphic to) an interval of a subgroup lattice of a finite
+group (although the opposite implication is obviously true) so
+it is possible that there is a congruence lattice $L$ of a finite
+algebra that is not an interval sublattice of a finite group. 
+
+
 
 
 
