ordinal sums minor edit

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -1007,7 +1007,7 @@ which is the set of all unary maps on $X$ which respect all relations in $L$.
 For two lattices $L,M$ the \emph{adjoined ordinal sum}  
 is denoted by $L\oplus_a M$ and is defined on $L\uplus (M\setminus\{0\})$
 by $x\le y$ iff $x\in L,y\in M$ or ($x,y\in L$ and $x\le^L y$) or ($x,y\in M$
-and $x\le^M y$). The \emph{ordinal sum} $L\oplus M$ is defined as $L\oplus_a\two\oplus_a M$.
+and $x\le^M y$). The \emph{ordinal sum} $L\oplus M$ is defined as $L\oplus_a\two\oplus_a M$ (see Figure~\ref{fig:ord_adjord}).
 
 The following theorem is a consequence of 
 McKenzie's shift product construction~\cite{McKenzie:1984}. 
