More work on intro.

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -215,6 +215,14 @@ MRREVIEWER = {E. W. Kiss},
     year = 	 {1986},
     OPTannote = 	 {}
   }
+  @ARTICLE{Palfy1988,
+  AUTHOR = 	{P. P. P\'alfy},
+  TITLE = 	{On {F}eit's examples of intervals in subgroup lattices},
+  JOURNAL = 	{J. Algebra},
+  VOLUME = 	{116},
+  YEAR = 	{1988},
+  PAGES = 	{471--479},
+  }
   @Misc{Palfy:2009,
     OPTkey = 	 {},
     author = 	 {P{\'a}lfy, P{\'e}ter P{\'a}l},
@@ -620,10 +628,10 @@ Not surprisingly many lattices with a group representation
 can be represented as a congruence lattice of a much smaller
 algebra. For example, the hexagon lattice, $L_6$ in the 
 last section, is the congruence lattice of an algebra 
-with 6 elements.
-Aschbacher~\cite{Aschbacher2008} has found groups
+with 6 elements. Palfy~\cite{Palfy1988} and
+Aschbacher~\cite{Aschbacher2008} have found groups
 $H < G$ such that the interval from $H$ to $G$ is $L_6$, but 
-$[G : H]$, the size of the algebra, is considerably larger.
+$[G : H]$, which is the size of the algebra, is considerably larger.
 
 \todo{can we say that Group(216,153) is the smallest group
 with $N_5$ as an interval?} 
